logs/vdh.log
'2013-03-21 14:02:24,181 - django.request - ERROR - Internal Server Error: /'
Traceback (most recent call last):
  File "/Library/Python/2.7/site-packages/django/core/handlers/base.py", line 101, in get_response
    request.path_info)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 209, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 216, in callback
    self._callback = get_callable(self._callback_str)
  File "/Library/Python/2.7/site-packages/django/utils/functional.py", line 27, in wrapper
    result = func(*args)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 92, in get_callable
    lookup_view = getattr(import_module(mod_name), func_name)
  File "/Library/Python/2.7/site-packages/django/utils/importlib.py", line 35, in import_module
    __import__(name)
  File "virtual_deconstruction_hub/statistics_generator/views.py", line 26
    def index(request):
      ^
IndentationError: expected an indented block
'2013-03-21 14:03:30,251 - django.request - ERROR - Internal Server Error: /'
Traceback (most recent call last):
  File "/Library/Python/2.7/site-packages/django/core/handlers/base.py", line 101, in get_response
    request.path_info)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 209, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 216, in callback
    self._callback = get_callable(self._callback_str)
  File "/Library/Python/2.7/site-packages/django/utils/functional.py", line 27, in wrapper
    result = func(*args)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 101, in get_callable
    (lookup_view, mod_name))
ViewDoesNotExist: Could not import statistics_generator.views.index. View does not exist in module statistics_generator.views.
'2013-03-21 14:03:31,038 - django.request - ERROR - Internal Server Error: /'
Traceback (most recent call last):
  File "/Library/Python/2.7/site-packages/django/core/handlers/base.py", line 101, in get_response
    request.path_info)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 300, in resolve
    sub_match = pattern.resolve(new_path)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 209, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 216, in callback
    self._callback = get_callable(self._callback_str)
  File "/Library/Python/2.7/site-packages/django/utils/functional.py", line 27, in wrapper
    result = func(*args)
  File "/Library/Python/2.7/site-packages/django/core/urlresolvers.py", line 101, in get_callable
    (lookup_view, mod_name))
ViewDoesNotExist: Could not import statistics_generator.views.index. View does not exist in module statistics_generator.views.
'2013-03-21 14:03:32,225 - django.db.backends - DEBUG - (0.064) SELECT `statistics_generator_statistics`.`id`, `statistics_generator_statistics`.`successful_transaction_amount`, `statistics_generator_statistics`.`average_transaction_time`, `statistics_generator_statistics`.`transaction_success_rate` FROM `statistics_generator_statistics` ORDER BY `statistics_generator_statistics`.`id` DESC LIMIT 1; args=()'
'2013-03-21 14:03:32,702 - django.db.backends - DEBUG - (0.414) SELECT `statistics_generator_statisticscategory`.`id`, `statistics_generator_statisticscategory`.`statistics_id`, `statistics_generator_statisticscategory`.`category`, `statistics_generator_statisticscategory`.`survey_count`, `statistics_generator_statisticscategory`.`buyer_count`, `statistics_generator_statisticscategory`.`seller_count`, `statistics_generator_statisticscategory`.`amount` FROM `statistics_generator_statisticscategory` WHERE `statistics_generator_statisticscategory`.`statistics_id` = 4 ; args=(4,)'
'2013-03-21 14:03:32,703 - statistics_generator.views - DEBUG - debug me baby'
'2013-03-21 14:03:32,704 - statistics_generator.views - DEBUG - t:0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
'2013-03-21 14:03:32,704 - statistics_generator.views - DEBUG - t:0, 500, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
'2013-03-21 14:03:32,923 - django.db.backends - DEBUG - (0.064) SELECT `statistics_generator_statistics`.`id`, `statistics_generator_statistics`.`successful_transaction_amount`, `statistics_generator_statistics`.`average_transaction_time`, `statistics_generator_statistics`.`transaction_success_rate` FROM `statistics_generator_statistics` ORDER BY `statistics_generator_statistics`.`id` DESC LIMIT 1; args=()'
'2013-03-21 14:03:32,955 - django.db.backends - DEBUG - (0.010) SELECT `statistics_generator_statisticscategory`.`id`, `statistics_generator_statisticscategory`.`statistics_id`, `statistics_generator_statisticscategory`.`category`, `statistics_generator_statisticscategory`.`survey_count`, `statistics_generator_statisticscategory`.`buyer_count`, `statistics_generator_statisticscategory`.`seller_count`, `statistics_generator_statisticscategory`.`amount` FROM `statistics_generator_statisticscategory` WHERE `statistics_generator_statisticscategory`.`statistics_id` = 4 ; args=(4,)'
'2013-03-21 14:03:32,957 - statistics_generator.views - DEBUG - debug me baby'
'2013-03-21 14:03:32,958 - statistics_generator.views - DEBUG - t:0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
'2013-03-21 14:03:32,958 - statistics_generator.views - DEBUG - t:0, 500, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
'2013-03-21 14:03:33,717 - django.db.backends - DEBUG - (0.064) SELECT `statistics_generator_statistics`.`id`, `statistics_generator_statistics`.`successful_transaction_amount`, `statistics_generator_statistics`.`average_transaction_time`, `statistics_generator_statistics`.`transaction_success_rate` FROM `statistics_generator_statistics` ORDER BY `statistics_generator_statistics`.`id` DESC LIMIT 1; args=()'
'2013-03-21 14:03:33,752 - django.db.backends - DEBUG - (0.015) SELECT `statistics_generator_statisticscategory`.`id`, `statistics_generator_statisticscategory`.`statistics_id`, `statistics_generator_statisticscategory`.`category`, `statistics_generator_statisticscategory`.`survey_count`, `statistics_generator_statisticscategory`.`buyer_count`, `statistics_generator_statisticscategory`.`seller_count`, `statistics_generator_statisticscategory`.`amount` FROM `statistics_generator_statisticscategory` WHERE `statistics_generator_statisticscategory`.`statistics_id` = 4 ; args=(4,)'
'2013-03-21 14:03:33,754 - statistics_generator.views - DEBUG - debug me baby'
'2013-03-21 14:03:33,754 - statistics_generator.views - DEBUG - t:0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
'2013-03-21 14:03:33,754 - statistics_generator.views - DEBUG - t:0, 500, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0'
